k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: social-spark
  labels:
    name: social-spark
